# AI-workflow-genarator

./: .gitignore  README.md  fix.ps1  health-check.ps1  notepad  package-lock.json  start.ps1  structure.txt
backend/: index.js  package-lock.json  package.json  server.js
backend/data/: sample.csv
backend/executor/: workflowExecutor.js
backend/planner/: workflowPlanner.js
backend/routes/: workflowRoutes.js
backend/tools/: calendarTool.js  csvTool.js  emailTool.js  hackerNewsTool.js  ollamaTool.js  redditTool.js  xTool.js
backend/validators/: planValidator.js
flowberry/: .env.example  README.md  check-ai.ps1  docker-compose.yml  run.ps1
flowberry/backend/: Dockerfile  Dockerfile.worker-calendar  Dockerfile.worker-email  alembic.ini  requirements.txt
flowberry/backend/alembic/: env.py
flowberry/backend/app/: main.py
flowberry/docs/diagrams/: er.md  sequence.md  system-architecture.md
flowberry/frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
flowberry/frontend/src/: App.tsx  ProtectedRoute.tsx  index.css  main.tsx
flowberry/infra/loki/: loki-config.yml
flowberry/infra/prometheus/: prometheus.yml
flowberry/mcp/flowberry_mcp_server/: README.md  mcp.json  pyproject.toml  requirements.txt
flowberry/mcp/flowberry_mcp_server/flowberry_mcp_server/: __init__.py  server.py
flowberry/mcp/flowberry_mcp_server/flowberry_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: OutputView.jsx  (+6 more)
(+79 files in other folders)
